--- a/src/components/Experience/Experience.module.css
+++ b/src/components/Experience/Experience.module.css
@@ -67,7 +67,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 17px;
+    gap: 20px;
     background: #19376d;
     background: linear-gradient(
             90deg,
@@ -101,11 +101,12 @@
 }
 
 .historyItemDetails ul {
-    margin-top: 6px;
+    margin-top: 10px;
     list-style-position: inside;
     font-size: 25px;
     list-style-type: disc;
     margin-left: 17px;
+    gap: 6px;
 }
 
 @media screen and (max-width: 830px) {
@@ -124,5 +125,45 @@
     .history {
         width: 100%;
         gap: 9px;
+    }
+
+    .historyItem {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+        background: #19376d;
+        border-radius: 10px;
+        padding: 24px;
+    }
+
+    .historyItem img {
+        width: 50%;
+    }
+
+    .historyItemDetails h3 {
+        font-size: 25px;
+        font-weight: 500;
+        text-align: center;
+    }
+
+    .historyItemDetails h4 {
+        font-size: 18px;
+        font-weight: 500;
+        text-align: center;
+    }
+
+    .historyItemDetails p {
+        font-size: 20px;
+        font-weight: 300;
+        text-align: center;
+    }
+
+    .historyItemDetails ul {
+        margin-top: 16px;
+        list-style-position: inside;
+        font-size: 18px;
+        list-style-type: disc;
+        margin-left: 8px;
     }
 }
