--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -14,7 +14,7 @@
 .content {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     color: var(--color-text);
     z-index: 1;
 }
@@ -25,9 +25,9 @@
     margin-bottom: 33px;
     font-family: var(--font-roboto);
     background: linear-gradient(
-        90deg,
-        rgba(255, 255, 255, 1) 70%,
-        rgba(255, 255, 255) 120%
+            90deg,
+            rgba(255, 255, 255, 1) 70%,
+            rgba(255, 255, 255) 120%
     );
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
@@ -37,7 +37,7 @@
     font-size: 30px;
     font-family: var(--font-roboto);
     margin-bottom: 52px;
-    width: 70%;
+    width: 100%;
 }
 
 .contactBtn {
@@ -106,9 +106,24 @@
 @media screen and (max-width: 830px) {
     .container {
         flex-direction: column-reverse;
+        align-items: center;
     }
 
     .content {
+        padding-top: 80px;
         align-items: center;
+    }
+
+    .title  {
+        font-size: 48px;
+    }
+
+    .heroImg {
+        width: 70%;
+    }
+
+    .description {
+        margin-left: 30px;
+        font-size: 24px;
     }
 }
